tests/userdata_derive/non_from_lua_field.stderr
error[E0277]: the trait bound `NotFromLua: FromLua` is not satisfied
  --> tests/userdata_derive/non_from_lua_field.rs:15:8
   |
15 |     f: NotFromLua,
   |        ^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `FromLua` is not implemented for `NotFromLua`
  --> tests/userdata_derive/non_from_lua_field.rs:4:1
   |
 4 | struct NotFromLua(u64);
   | ^^^^^^^^^^^^^^^^^
   = help: the following other types implement trait `FromLua`:
             AnyUserData
             BString
             BTreeMap<K, V>
             BTreeSet<T>
             BorrowedBytes
             BorrowedStr
             Box<[T]>
             Box<str>
           and $N others
note: required by a bound in `add_field_method_set`
  --> src/userdata.rs
   |
   |     fn add_field_method_set<M, A>(&mut self, name: impl Into<String>, method: M)
   |        -------------------- required by a bound in this associated function
...
   |         A: FromLua;
   |            ^^^^^^^ required by this bound in `UserDataFields::add_field_method_set`
